Center text and fix spacing

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -90,6 +90,7 @@ h1 {
     height: 636px;
     padding:0px;
     background-image:url('redesign2/main_notabs.jpg');
+    text-align: center;
 
 }
 
